Add ExpandableTextView test coverage (#51)